@@ -67,7 +67,7 @@ et-xmlfile = 1.0.1
 five.pt = 2.2.5
 forbiddenfruit = 0.1.2
 ftw.builder = 1.11.1
-ftw.bumblebee = 3.6.0
+ftw.bumblebee = 3.7.0
 ftw.casauth = 1.2.0
 ftw.chameleon = 1.2.0
 ftw.contentmenu = 2.4.0
