@@ -7,6 +7,7 @@ Changelog
 
 - Translate status message type in forms. [njohner]
 - Add Open XML Visio mimetypes. [deiferni]
+- Bump ftw.bumblebee to 3.7.0 for new derived secrets for the demand endpoint. [deiferni]
 - Fix issue when returning an excerpt to an already decided proposal. [njohner]
 - Fix data in Task PDF when resolving a dossier. [njohner]
 - Make save as pdf button colored green. [deiferni]
